--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi CV</title>
-    <link rel="stylesheet" href="/assets/css/micv.css">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/micv.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 </head>
 <body>
     <div class="conteiner">
-        <img src="/assets/img/fotoJulio.jpg" alt="mi foto" class="imagen-perfil">
+        <img src="./assets/img/fotoJulio.jpg" alt="mi foto" class="imagen-perfil">
         <p>Julio Izaguirre</p>
     </div>
     <div class="conteiner2">
@@ -47,16 +47,16 @@
     </div>
     <div class="row">
         <div class="col-3 bg-secondary format-text-timeline">
-            <img src="/assets/img/lanza-libre.png" class="icono-timeline">
+            <img src="./assets/img/lanza-libre.png" class="icono-timeline">
         </div>
         <div class="col-3 bg-dark format-text-timeline">
-            <img src="/assets/img/lanza-libre.png" class="icono-timeline">
+            <img src="./assets/img/lanza-libre.png" class="icono-timeline">
         </div>
         <div class="col-3 bg-secondary format-text-timeline">
-            <img src="/assets/img/lanza-libre.png" class="icono-timeline">
+            <img src="./assets/img/lanza-libre.png" class="icono-timeline">
         </div>
         <div class="col-3 bg-dark format-text-timeline">
-            <img src="/assets/img/lanza-libre.png" class="icono-timeline">
+            <img src="./assets/img/lanza-libre.png" class="icono-timeline">
         </div>
     </div>
 
@@ -80,16 +80,16 @@
         </div>
         <div class="row">
             <div class="col-3  format-text-timeline">
-                <img src="/assets/img/docker.png"class="icono-habilidades" >
+                <img src="./assets/img/docker.png"class="icono-habilidades" >
             </div>
             <div class="col-3 format-text-timeline">
-                <img src="/assets/img/GitHub.jpg"class="icono-git" >
+                <img src="./assets/img/GitHub.jpg"class="icono-git" >
             </div>
             <div class="col-3  format-text-timeline">
                 <img src="/assets/img/IBM.png"class="icono-ibm" >
             </div>
             <div class="col-3  format-text-timeline">
-                <img src="/assets/img/Kubernetes.png" >
+                <img src="./assets/img/Kubernetes.png" >
             </div>
             <div class="row">
                 <div class="col-3  format-text-timeline">
