--- a/index.html
+++ b/index.html
@@ -86,23 +86,23 @@
                 <img src="./assets/img/GitHub.jpg"class="icono-git" >
             </div>
             <div class="col-3  format-text-timeline">
-                <img src="/assets/img/IBM.png"class="icono-ibm" >
+                <img src="./assets/img/IBM.png"class="icono-ibm" >
             </div>
             <div class="col-3  format-text-timeline">
                 <img src="./assets/img/Kubernetes.png" >
             </div>
             <div class="row">
                 <div class="col-3  format-text-timeline">
-                    <img src="img/linux.png">
+                    <img src="./assets/img/linux.png">
                 </div>
                 <div class="col-3  format-text-timeline">
-                    <img src="img/SQL server.jpg">
+                    <img src="./assets/img/SQL server.jpg">
                 </div>
                 <div class="col-3  format-text-timeline">
-                    <img src="img/Weblogic.png">
+                    <img src="./assets/img/Weblogic.png">
                 </div>
                 <div class="col-3  format-text-timeline">
-                    <img src="img/portainer.png">
+                    <img src="./assets/img/portainer.png">
                 </div>
             
             
